[package]
name = "haxorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
rustyline = "10.0"
url = "*"
tokio-tungstenite = "0.17"
tokio = { version = "1", features = ["full"] }
futures-channel = "*"
futures-util = "*"
tokio-stream = "0.1"
nom = "7.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3"
